--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My First Web Page</title>
   </head>
   <body>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <h1>Welcome to my first web page!</h1>
     <p>This is a paragraph of text. I can write anything I want here.</p>
     <p>Here is another paragraph of text. I can write anything I want here, too.</p>
