パスをgithubPagesにあわせた

--- a/abroad.html
+++ b/abroad.html
@@ -12,26 +12,26 @@
 
 <head>
     <title>留学情報TOP</title>
-    <link rel="stylesheet" href="/abroad.css">
+    <link rel="stylesheet" href="/yugo_union_site/abroad.css">
 </head>
 
 <body>
     <article>
         <h3>
-            <li><a href="/abroad/before.html">留学前の準備</a></li>
+            <li><a href="/yugo_union_site/abroad/before.html">留学前の準備</a></li>
         </h3>
 
         <h3>
-            <li><a href="/abroad/during.html">留学中の対処マニュアル</a></li>
+            <li><a href="/yugo_union_site/abroad/during.html">留学中の対処マニュアル</a></li>
         </h3>
 
 
         <h3>
-            <li><a href="/abroad/after.html">留学後のこと</a></li>
+            <li><a href="/yugo_union_site/abroad/after.html">留学後のこと</a></li>
         </h3>
     </article>
     <footer>
-        <a href="/">←back</a>
+        <a href="/yugo_union_site/">←back</a>
     </footer>
 </body>
 
