--- a/abroad/after.html
+++ b/abroad/after.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　留学後のこと</title>
-    <link rel="stylesheet" href="/abroad/after.css">
+    <link rel="stylesheet" href="/yugo_union_site/abroad/after.css">
 </head>
 <body>
     <article>
@@ -17,5 +17,5 @@
         <p>この場合、基本的に留学後に何かを提出しなければならないことはないが、おそらく誰のプロジェクトかによる部分も大きい。<br>
         単位認定は先生の方で進めてくれるはずだろうが、心配なら一度帰国後に単位認定のためにすることはあるかを尋ねた方がよい。</p>
     </article>
-    <a href="/abroad.html">←back</a>
+    <a href="/yugo_union_site/abroad.html">←back</a>
 </body>
