--- a/abroad/during.html
+++ b/abroad/during.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　留学中の対処マニュアル</title>
-    <link rel="stylesheet" href="/abroad/during.css">
+    <link rel="stylesheet" href="/yugo_union_site/abroad/during.css">
 </head>
 
 <body>
@@ -39,5 +39,5 @@
         </footer>
 
     </article>
-    <a href="/abroad.html">←back</a>
+    <a href="/yugo_union_site/abroad.html">←back</a>
 </body>
