--- a/ay_intro/first-details.html
+++ b/ay_intro/first-details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="details-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
 </head>
 <title>先導学類　1年次の詳細</title>
 
@@ -24,6 +24,6 @@
 
     <p>全体的に１年生のうちは良くも悪くも共通教育をするだけなので時間がありふれている。<br>ので、興味がありそうなことをこの時期に積極的に探そう。</p>    
     </article>
-    <footer><a href="/ay_intro.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
 </body>
 
