--- a/ay_intro/fourth-details.html
+++ b/ay_intro/fourth-details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="details-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
 </head>
 <title>先導学類　4年次の詳細</title>
 <article>
@@ -19,6 +19,6 @@
         <li>,,,</li>
         <h3>Q4</h3>
         <li>,,,</li>
-        <p><a href="/ay_intro.html">←back</a></p>
+        <p><a href="/yugo_union_site/ay_intro.html">←back</a></p>
 </article>
 
