--- a/ay_intro/second-details.html
+++ b/ay_intro/second-details.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="details-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
 </head>
 <title>先導学類　2年次の詳細</title>
 
@@ -28,6 +28,6 @@
             外部試験はいつ受けても問題はないが、徐々に時間的、精神的余裕もなくなってくるので早いうちに受けるのをお勧めする。
         </p>
     </article>
-    <footer><a href="/ay_intro.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
 </body>
 
