--- a/ay_intro/third-details.html
+++ b/ay_intro/third-details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="details-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
 </head>
 <title>先導学類　3年次の詳細</title>
 <body>
@@ -26,6 +26,6 @@
         <p>就活も始まり徐々に何かに集中して時間を費やすことが難しくなってくる。<br>
         留学も大抵の人はこの夏休みにいくことになり、習得済み単位状況によっては留年も確定する人がでてきてしまう</p>
 </article>
-<footer><a href="/ay_intro.html">←back</a></footer>
+<footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
 </body>
 
