--- a/secret_syllabus.html
+++ b/secret_syllabus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　裏シラバス</title>
-    <link rel="stylesheet" href="/secret-syllabus.css">
+    <link rel="stylesheet" href="/yugo_union_site/secret-syllabus.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     </header>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            fetch('/syllabus_data.json')
+            fetch('/yugo_union_site/syllabus_data.json')
                 .then(response => response.json())
                 .then(data => {
                     const article = document.querySelector('article');
@@ -47,7 +47,7 @@
                                 li.style.marginRight = '3px'; // 項目間のマージンを設定する
 
                                 const a = document.createElement('a');
-                                a.href = `/syllabus_pages/${subject.file}.html`;
+                                a.href = `/yugo_union_site/syllabus_pages/${subject.file}.html`;
                                 a.textContent = subject.name;
                                 li.appendChild(a);
 
@@ -68,7 +68,7 @@
 
     <article></article>
    
-    <footer><a href="/">←back</a></footer>
+    <footer><a href="/yugo_union_site/">←back</a></footer>
 </body>
 
 </html>
