--- a/syllabus_pages/AI.html
+++ b/syllabus_pages/AI.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 人工知能　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>人工知能の歴史やニューラルネットワークの仕組みを学ぶ</li>
         <li>毎回演習問題を解く。そこから期末試験が出たりもする</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
