--- a/syllabus_pages/ESG-investment.html
+++ b/syllabus_pages/ESG-investment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> ESG投資　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>投資をする上での選択基準となるESGの概念とESG投資をすることによるメリットを学ぶ</li>
         <li>事例研究では自分たちで企業が提示しているESG理念や、実際にその基準に基づいてどのような投資をしているかを調査、分析する</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
