--- a/syllabus_pages/basic-SDGs.html
+++ b/syllabus_pages/basic-SDGs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> SDGs基礎　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>最終的に自分の思う第18番目のゴールを作る。このゴールをSDGs実践で実行していく。</li>
         <li></li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
