--- a/syllabus_pages/basic-fintech-and-using-business.html
+++ b/syllabus_pages/basic-fintech-and-using-business.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> フィンテック基礎とビジネス応用　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>グループ活動もあり、第7回目くらいでフィンテックの活用事例を紹介し発表することになる。</li>
         <li>第8回目ではその場で課題レポートを書いて提出となる。</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
