--- a/syllabus_pages/basic-marketing.html
+++ b/syllabus_pages/basic-marketing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> マーケティング基礎　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>期末テストでは110点満点で学んだ基礎概念を応用した記述問題がメイン</li>
         <li>教科書から少なくとも１問は出る</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
