--- a/syllabus_pages/basic-science-on-environment.html
+++ b/syllabus_pages/basic-science-on-environment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 環境基礎科学　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>化学物質などが自然環境に与える影響などを学ぶ</li>
         <li>過去の事例から将来の自然環境に与える影響などの理解を深める</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
