--- a/syllabus_pages/basic-technology.html
+++ b/syllabus_pages/basic-technology.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>テクノロジー基礎　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <li>オムニバス形式</li>
         <li>期末レポートでは授業の感想などを書く</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
