--- a/syllabus_pages/changing-society-and-productivity.html
+++ b/syllabus_pages/changing-society-and-productivity.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>社会変動と労働生産性　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>前8回のうち2回を選んで、その概要、そのテーマに対する課題と自身の解決策を最終レポートで書く</li>
         
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
