--- a/syllabus_pages/consuminglife.html
+++ b/syllabus_pages/consuminglife.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>消費生活論　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>消費者視点で経済を捉えてみる</li>
         <li>消費者として未来を創る提案をグループワークで行う</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
