--- a/syllabus_pages/demand-forecasting.html
+++ b/syllabus_pages/demand-forecasting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 需要予測　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>プログラミングコードはその都度教えてくれる</li>
         <li>最終レポートでは新しい交通手段ができた場合の需要予測を行う</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
