--- a/syllabus_pages/globalization.html
+++ b/syllabus_pages/globalization.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> グローバリゼーション　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>事前課題の文献を読んでグループワークを行う</li>
         <li>グローバリゼーション下における様々な課題について学ぶ</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
