--- a/syllabus_pages/hole-care-and-restart.html
+++ b/syllabus_pages/hole-care-and-restart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 地域包括ケアと地方創生　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>地元の地域包括ケアの事例を調べて来る課題もある</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
