--- a/syllabus_pages/know-about-temporaly-society.html
+++ b/syllabus_pages/know-about-temporaly-society.html
@@ -4,7 +4,7 @@ DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <title>現代社会を知る　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@ DOCTYPE html>
         <li>最終レポートで関心を持ったテーマへの課題と解決策を書くことになる</li>
         <li>質問は加点</li>
         </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
