--- a/syllabus_pages/life-design.html
+++ b/syllabus_pages/life-design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 生活デザイン論　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>今ある自分の生活をもう一度デザインしなおす講義</li>
         <li>他の講義のようなペルソナを設定してのデザイン思考ではなく、自分主体のアート思考で講義が進む</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
