--- a/syllabus_pages/physical-brain-connecting.html
+++ b/syllabus_pages/physical-brain-connecting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> フィジカル・ブレイン接続　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>身体や脳に関する少し専門的なことを学ぶ</li>
         <li>生命科学的視点から見る医療と先端医学の延長線上の講義</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
