--- a/syllabus_pages/pioneer-on-medicine.html
+++ b/syllabus_pages/pioneer-on-medicine.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 先端医学　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>前回を踏まえた深堀を毎回グループ発表する</li>
         <li>最終発表では医療改革できるような提案をする</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
