--- a/syllabus_pages/sensering.html
+++ b/syllabus_pages/sensering.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> センシング論　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <li>様々なセンシング技術と活用事例などを学ぶ</li>
         <li>センシングだけではなく統計分析の類もちょっとする</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
