--- a/syllabus_pages/super-old-society-and-science-technology.html
+++ b/syllabus_pages/super-old-society-and-science-technology.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 超高齢社会と科学技術　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>VRなどの科学技術がどのように超高齢社会を支えていけるかを学ぶ</li>
         <li>希望すれば実際に使われているVRや実際の現場に訪れることができるかもしれない</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
