--- a/syllabus_pages/understand-culture-and-develop-career.html
+++ b/syllabus_pages/understand-culture-and-develop-career.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 異文化理解とキャリア開発　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>第１回から第４回は自己分析的なことに繋がる</li>
         <li>第５回以降では異文化とはどういうことかを体験する</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
