--- a/syllabus_pages/world-task-and-skill-trends.html
+++ b/syllabus_pages/world-task-and-skill-trends.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 世界の課題と技術トレンド　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>土木的な課題の事例紹介がメイン</li>
         <li>コンクリートを作ったり、ドローンを飛ばしたり何かしらの実演がある</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
