--- a/abroad/before.html
+++ b/abroad/before.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　留学前の準備</title>
-    <link rel="stylesheet" href="/abroad/before.css">
+    <link rel="stylesheet" href="/yugo_union_site/abroad/before.css">
 </head>
 
 <body>
@@ -61,5 +61,5 @@
         </footer>
 
     </article>
-    <a href="/abroad.html">←back</a>
+    <a href="/yugo_union_site/abroad.html">←back</a>
 </body>
