--- a/ay_intro.html
+++ b/ay_intro.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/ay_intro.css">
+    <link rel="stylesheet" href="/yugo_union_site/ay_intro.css">
 </head>
 <title>先導学類　各学年の流れ</title>
 
@@ -14,7 +14,7 @@
     <article>
         <h2>1年次</h2>
         <table>
-            <th><a href="/ay_intro/first-details.html">1年間の概要</a></th>
+            <th><a href="/yugo_union_site/ay_intro/first-details.html">1年間の概要</a></th>
             <td>
                 <li>共通教育科目を通して大学の勉学の基礎を築く</li>
                 <li>１年間EAPやTOEIC演習を通して留学や語学試験に備える</li>
@@ -23,7 +23,7 @@
         </table>
         <h2>2年次</h2>
         <table>
-            <th><a href="/ay_intro/second-details.html">1年間の概要</a></th>
+            <th><a href="/yugo_union_site/ay_intro/second-details.html">1年間の概要</a></th>
             <td>
                 <li>年度の前半で共通教育科目を充足させるのがベスト</li>
                 <li>専門科目のコア科目を充足させ、Q4からは鍛錬科目が始まる</li>
@@ -32,7 +32,7 @@
         </table>
         <h2>3年次</h2>
         <table>
-            <th><a href="/ay_intro/third-details.html">1年間の概要</a></th>
+            <th><a href="/yugo_union_site/ay_intro/third-details.html">1年間の概要</a></th>
             <td>
                 <li>プロジェクト演習で先生と一緒にプロジェクトを行う</li>
                 <li>長期休みを利用して留学又は国際インターンシップに行く</li>
@@ -49,5 +49,5 @@
             </td>
         </table>
     </article>
-    <footer><a href="/">←back</a></footer>
+    <footer><a href="/yugo_union_site/">←back</a></footer>
 </body>
