--- a/syllabus_pages/change-the-world.html
+++ b/syllabus_pages/change-the-world.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 世界変革技術論　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>最終レポートでは世界を変革した技術を自分で取り上げて記述する</li>
         <li>小田桐先生の回は全回zoomで『ブラックジャックによろしく』を読む</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
