--- a/syllabus_pages/diversity-promotion.html
+++ b/syllabus_pages/diversity-promotion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> ダイバーシティ促進　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>期末試験では事前にテーマが教えられるので、あらかじめ考えておく</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
