--- a/syllabus_pages/future-medical-science.html
+++ b/syllabus_pages/future-medical-science.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 未来医科学　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>グループワークがメイン</li>
         <li>毎回ディスカッションの課題がだされる</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
