--- a/syllabus_pages/leading-mathematics.html
+++ b/syllabus_pages/leading-mathematics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 先導数学　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>授業の深堀を最終レポートで記述する</li>
         <li>授業中に数式は多く紹介されるが、数式を立式して解ける必要はない</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
