--- a/syllabus_pages/regulatory-science.html
+++ b/syllabus_pages/regulatory-science.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> レギュラトリーサイエンス　裏シラバス</title>
-    <link rel="stylesheet" href="/syllabus-format.css">
+    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>毎回グループディスカッションの課題が出される</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/secret_syllabus.html">←back</a></footer>
+    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
