--- a/abroad/before.html
+++ b/abroad/before.html
@@ -43,9 +43,11 @@
         </h2>
         <p>行く国、地域、期間、目的によってはそれに応じたビザを取る必要がある。どういったビザが必要になるかは各プロジェクト次第だが、融合学域のプロジェクトの特性上どのビザがふさわしいのか曖昧なことがあるので、しっかり担当教員や場合によっては各国領事館に聞かなければならない。</p>
         <p>また、申請から取得までは数日で済むが、必要書類をそろえるのに時間がかかるケースもあるため、プロジェクトで留学が決まり次第準備にかかった方がいい。</p>
-        <p>お金に余裕があるなら代理業者に頼むのも手である。<br>下の動画にわかりやすくまとめてあるので、参考に見ると良い。<br>
-            <video src="ビザの取り方講座.mp4"></video></p>
-        <h2>
+        <p>お金に余裕があるなら代理業者に頼むのも手である。<br>下の動画にわかりやすくまとめてあるので、参考に見ると良い。<br></p>
+        <div style="margin: 0 auto; width: 50%;">
+            <video src="/yugo_union_site/abroad/ビザの取り方講座.mp4" style="width: 100%;" controls></video>
+        </div>
+            <h2>
             <li>保険に加入（３年次）</li>
             </h2>
             <p>留学中にケガや病気にかかった場合には現地の病院に行く必要がある。しかし、その国の制度的に医療費、診療費が考えられないくらいに高くなることがほとんどである。保険に入ることで現地で保険証を提示すればほぼ無料で受診できるようになるため、必ず入っておかなくてはならない。<br>
