--- a/abroad.html
+++ b/abroad.html
@@ -12,7 +12,7 @@
 
 <head>
     <title>留学情報TOP</title>
-    <link rel="stylesheet" href="/yugo_union_site/abroad.css">
+    <link rel="stylesheet" href="/yugo_union_site/abroad/abroad.css">
 </head>
 
 <body>
